[B][COLOR red]Update - v4.2.1 – Sept. 26, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] fix incorrect version bump.[/I]

[B][COLOR red]Update - v4.2.0 – Sept. 26, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Free hoster and foreign scraper support has been removed
    due to limited time to maintain.  Premium hosters supported
    by AD, PM, and RD is still supported.[/I]
[COLOR yellow]--[/COLOR][I] New scraper pack called "Fenom Scrapers" per above
    changes and OpenScrapers is no longer to be maintained.[/I]
[COLOR yellow]--[/COLOR][I] Venom now integrates with a new addon to access your
    account information called "My Accounts".  My Accounts
    allows any addon to access the authorized info so if
    adopted by other developers it would eliminate the
    need to authorize in every addon you use.
    This does however require a new initial setup.[/I]
[COLOR yellow]--[/COLOR][I] Fixed missing download option for premium hosters.[/I]
[COLOR yellow]--[/COLOR][I] Fixed library imports where disabled notifications would
    prematurely terminate the import process.[/I]
[COLOR yellow]--[/COLOR][I] Fixed invalid characters displayed in source select.[/I]
[COLOR yellow]--[/COLOR][I] Source select has been re-written for the removal of
    "Free" hoster streams.  A new layout is now
    in place and includes an elapsed timer count.[/I]
[COLOR yellow]--[/COLOR][I] New bookmark options to use exist local bookmarks
    or Trakt scrobble.[/I]

[B][COLOR red]Update - v4.1.5 – Sept. 13, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed typo in v4.1.4 Apple fix.[/I]

[B][COLOR red]Update - v4.1.4 – Sept. 13, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Settings fix for Apple TV, curtsey of tikipeter.[/I]

[B][COLOR red]Update - v4.1.3 – Sept. 09, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fix for missing context menu option "Download" when
    selection is free or premium hoster source.[/I]