@@ -13,8 +13,8 @@
 		<setting id="page.item.limit" type="slider" label="32011" default="20" range="10,60" option="int" />
 		<setting id="fanart" type="bool" label="32318" default="true" />
 		<setting id="disable.fanarttv" type="bool" label="32012" default="false" />
-		<setting type="action" label="32612" action="RunPlugin(plugin://plugin.video.venom/?action=cache_clearMeta)" />
-		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=disableFanartTV)" />
+		<setting id="clear.meta" type="action" label="32612" action="RunPlugin(plugin://plugin.video.venom/?action=cache_clearMeta)" />
+		<setting id="disable.fanarttv.help" type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=disableFanartTV)" />
 		<setting id="disable.player.art" type="bool" label="35525" default="false" enable="!eq(-3,true)" />
 		<setting id="hidecinema" type="bool" label="32571" default="false" />
 		<setting id="hidecinema.rollback" type="slider" label="40063" enable="eq(-1,true)" default="6" range="1,12" option="int" />
@@ -22,7 +22,7 @@
 		<setting id="newmovies.widget" type="select" label="32320" lvalues="32302|32321|32322|32323|32324|32580" default="5" />
 		<setting id="notification.sound" type="bool" label="35527" default="false" />
 		<setting id="general.checkAddonUpdates" type="bool" label="35524" default="true" />
-		<setting type = "lsep" label="32003" />
+		<setting type="lsep" label="32003" />
 		<setting id="sort.movies.type" type="select" label="35190" lvalues="33564|33039|35187|35188|35391|35392|35393" default="4" />
 		<setting id="sort.movies.order" type="enum" label="33679" lvalues="33649|33650" default="1" subsetting="true" enable="!eq(-1,0)" />
 		<setting id="sort.movies.watchlist.type" type="select" label="35574" lvalues="33564|33039|35187|35188|35391|35392|35393" default="5" />
@@ -32,8 +32,6 @@
 	<!-- Navigation - 1 -->
 	<category label="32621">
 		<setting type="lsep" label="32005" />
-<!-- 		<setting type="bool" visible="false" /> --> <!-- trick to ensures that a separator is drawn. -->
-<!-- 		<setting type="sep" /> -->
 		<setting id="mylists.widget" type="bool" label="32329" default="true" />
 		<setting id="navi.anime" type="bool" label="40068" default="false" />
 		<setting id="navi.youtube" type="bool" label="40061" default="false" />
@@ -98,12 +96,12 @@
 		<setting id="unaired.identify" type="select" label="32608" lvalues="32589|32590|32591|32592|32593|32594|32595|32596|32597|32666|32667|32668|32669|32670|32671|32598" default="8" enable="eq(-1,true)" />
 		<setting id="tvshows.unwatched.enabled" type="bool" label="33891" default="false" />
 		<setting id="multi.unwatched.enabled" type="bool" label="    allow multi Episodes to Show Unwatched Count" default="false" visible="eq(-1,true)"/>
-		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=multi.unwatched)" visible="eq(-2,true)" />
+		<setting id="multi.unwatched.help" type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=multi.unwatched)" visible="eq(-2,true)" />
 		<setting id="tvshows.calendar.extended" type="bool" label="32023" default="false" />
 		<setting type="lsep" label="40025" />
-		<setting type="action" action="InstallAddon(service.upnext)" label="40027" option="close" visible="!System.HasAddon(service.upnext)" />
+		<setting id="install.upnext" type="action" action="InstallAddon(service.upnext)" label="40027" option="close" visible="!System.HasAddon(service.upnext)" />
 		<setting id="enable.upnext" type="bool" default="false" label="40028" visible="System.HasAddon(service.upnext)" />
-		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=upnext)" />
+		<setting id="upnext.help" type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=upnext)" />
 		<setting id="upnext.time" type="slider" enable="eq(-2,true)" visible="eq(-2,true)" default="60" label="40029" option="int" range="10,60" />
 		<setting id="auto.playlistcreate" type="bool" label="40030" default="true" />
 		<setting type="lsep" label="32375" />
@@ -111,7 +109,7 @@
 		<!-- <setting id="tvshows.networks.filter" type="select" label="32379" lvalues="32380|32381|32382|32383|32384|32385" default="4" enable="eq(-1, 1)" /> -->
 		<setting label="32004" type="lsep" />
 		<setting id="tvshows.direct" type="bool" label="35492" default="false" visible="!eq(-17,)" />
-		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=directProgress)" />
+		<setting id="tvshows.direct.help" type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=directProgress)" />
 		<setting id="sort.shows.type" type="select" label="35191" lvalues="33564|33039|35187|35188|35391|35392|35393" default="0" />
 		<setting id="sort.shows.order" type="enum" label="33679" lvalues="33649|33650" default="0" subsetting="true" enable="!eq(-1,0)" />
 		<setting id="sort.shows.watchlist.type" type="select" label="35574" lvalues="33564|33039|35187|35188|35391|35392|35393" default="5" visible="!eq(-20,)" />
@@ -140,10 +138,10 @@
 
 	<!-- Providers - 4 -->
 	<category label="32345">
-		<setting type="action" label="32651" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=fenomscrapersSettings&amp;opensettings=true&amp;query=4.1)" />
-		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=Providers)" />
+		<setting id="fenomscrapers.opensettings" type="action" label="32651" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=fenomscrapersSettings&amp;opensettings=true&amp;query=4.1)" />
+		<setting id="fenomscrapers.help" type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=Providers)" />
 		<setting type="lsep" label="40067" />
-		<setting type="action" label="32611" action="RunPlugin(plugin://plugin.video.venom/?action=cache_clearSources)" />
+		<setting id="cache.clearSources" type="action" label="32611" action="RunPlugin(plugin://plugin.video.venom/?action=cache_clearSources)" />
 	</category>
 
 	<!-- Source Options - 5 -->
@@ -194,31 +192,31 @@
 	<!-- Trakt - 7 -->
 	<category label ="32315">
 		<setting type="lsep" label="32315" />
-		<setting type="action" label="Open My Accounts Addon" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=openMyAccount&amp;opensettings=true&amp;query=7.1)" />
+		<setting id="myaccount.opensettings" type="action" label="Open My Accounts Addon" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=openMyAccount&amp;opensettings=true&amp;query=7.1)" />
 		<setting id="trakt.username" type="text" default="" label="40062" enable="false" visible="true" />
-		<setting type="action" label="Account Info" action="RunPlugin(plugin://plugin.video.venom/?action=traktAcctMyAccounts)" visible="!eq(-1,)" />
+		<setting id="myaccount.trakt" type="action" label="Account Info" action="RunPlugin(plugin://plugin.video.venom/?action=traktAcctMyAccounts)" visible="!eq(-1,)" />
 		<setting id="trakt.token" type="text" visible="false" label="" default="" />
 		<setting id="trakt.refresh" type="text" visible="false" label="" default="" />
 		<setting id="trakt.server.notifications" type="bool" label="33051" default="true" visible="!eq(-4,)" />
 		<setting id="trakt.general.notifications" type="bool" label="33052" default="true" visible="!eq(-5,)" />
 		<setting id="trakt.rating" type="enum" label="35187" lvalues="33564|35547" default="0" visible="!eq(-6,)" />
 		<setting id="trakt.scrobble" type="bool" label="32097" default="false" visible="!eq(-7,)"/>
-		<setting type="text" label="32098" enable="false" />
+		<setting id="trakt.message1" type="text" label="32098" enable="false" />
 		<setting id="trakt.scrobble.notify" type="bool" label="32099" default="false" visible="!eq(-9,) + eq(-2,true)"/>
 		<setting id="resume.source" type="enum" label="32095" lvalues="32314|32096" default="0" visible="!eq(-10,)" />
 		<setting type="lsep" label="32645" />
 		<setting id="autoTraktOnStart" type="bool" label="32646" default="False" enable="!eq(-12,)" />
 		<setting id="schedTraktTime" type="slider" label="32647" default="0" range="0,24" option="int" enable="eq(-1,true)" />
-		<setting type="text" label="32648" default="" enable="false" />
+		<setting id="trakt.message2" type="text" label="32648" default="" enable="false" />
 	</category>
 
 	<!-- Accounts - 8 -->
 	<category label="32346">
-		<setting type="action" label="Open My Accounts Addon" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=openMyAccount&amp;opensettings=true&amp;query=8.0)" />
+		<setting id="myaccount.opensettings2" type="action" label="Open My Accounts Addon" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=openMyAccount&amp;opensettings=true&amp;query=8.0)" />
 		<setting type="action" label="sync(re) with My Accounts" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=syncMyAccount&amp;opensettings=true&amp;query=8.1)" />
 		<setting type="action" label="      [COLOR FFA0C12C]Help[/COLOR]" action="RunPlugin(plugin://plugin.video.venom/?action=ShowHelp&amp;name=myAccountsSync)" />
 		<setting type="lsep" label="Acount Info from My Accounts" />
-		<setting type="bool" visible="false" /> <!-- trick to ensures that a separator is drawn. -->
+		<setting id="seperator" type="bool" visible="false" /> <!-- trick to ensures that a separator is drawn. -->
 
 		<setting type="lsep" label="All Debrid" />
 		<setting type="action" label="[I]Please visit My Accounts for setup[/I]" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=openMyAccount&amp;opensettings=true&amp;query=1.4)" visible="eq(2,)" />
@@ -277,7 +275,7 @@
 		<setting id="library.movie" type="folder" label="32543" default="special://userdata/addon_data/plugin.video.venom/Movies" />
 		<setting id="library.tv" type="folder" label="32544" default="special://userdata/addon_data/plugin.video.venom/TVShows" />
 		<!-- <setting id="library.tv.scraper" type="select" label="   TV Show scraper" values="TMDb|TVDb" default="TVDb" /> -->
-<!-- 		<setting type="action" label="32677" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=library_setup)" /> -->
+		<!-- <setting type="action" label="32677" option="close" action="RunPlugin(plugin://plugin.video.venom/?action=library_setup)" /> -->
 		<setting type="action" label="32677" action="RunPlugin(plugin://plugin.video.venom/?action=library_setup)" />
 		<setting type="lsep" label="32542" />
 		<setting id="library.service.update" type="bool" label="32545" default="false" />
@@ -301,8 +299,8 @@
 		<setting id="tv.download.path" type="folder" label="32350" enable="eq(-3,true)" default="" />
 		<setting id="downloads.file.format" type="select" label="40022" lvalues="40023|40024" default="1" enable="eq(-4,true)" />
 		<setting type="sep" />
-		<setting type="text" label="32351" default="" enable="false" />
-		<setting type="text" label="32352" default="" enable="false" />
+		<setting id="downloads.message1" type="text" label="32351" enable="false" />
+		<setting id="downloads.message2" type="text" label="32352" default="" enable="false" />
 	</category>
 
 	<!-- Subtitles - 11 -->
@@ -313,8 +311,8 @@
 		<setting id="subtitles.lang.1" type="select" label="32356" values="Afrikaans|Albanian|Arabic|Armenian|Basque|Bengali|Bosnian|Breton|Bulgarian|Burmese|Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Esperanto|Estonian|Finnish|French|Galician|Georgian|German|Greek|Hebrew|Hindi|Hungarian|Icelandic|Indonesian|Italian|Japanese|Kazakh|Khmer|Korean|Latvian|Lithuanian|Luxembourgish|Macedonian|Malay|Malayalam|Manipuri|Mongolian|Montenegrin|Norwegian|Occitan|Persian|Polish|Portuguese|Portuguese(Brazil)|Romanian|Russian|Serbian|Sinhalese|Slovak|Slovenian|Spanish|Swahili|Swedish|Syriac|Tagalog|Tamil|Telugu|Thai|Turkish|Ukrainian|Urdu" enable="eq(-3,true)" default="English" />
 		<setting id="subtitles.lang.2" type="select" label="32357" values="Afrikaans|Albanian|Arabic|Armenian|Basque|Bengali|Bosnian|Breton|Bulgarian|Burmese|Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Esperanto|Estonian|Finnish|French|Galician|Georgian|German|Greek|Hebrew|Hindi|Hungarian|Icelandic|Indonesian|Italian|Japanese|Kazakh|Khmer|Korean|Latvian|Lithuanian|Luxembourgish|Macedonian|Malay|Malayalam|Manipuri|Mongolian|Montenegrin|Norwegian|Occitan|Persian|Polish|Portuguese|Portuguese(Brazil)|Romanian|Russian|Serbian|Sinhalese|Slovak|Slovenian|Spanish|Swahili|Swedish|Syriac|Tagalog|Tamil|Telugu|Thai|Turkish|Ukrainian|Urdu" enable="eq(-4,true)" default="English" />
 		<setting type="sep" />
-		<setting type="text" label="32358" default="" enable="false" />
-		<setting type="text" label="32359" default="" enable="false" />
+		<setting id="subtitles.message1" type="text" label="32358" enable="false" />
+		<setting id="subtitle.message2" type="text" label="32359" enable="false" />
 	</category>
 
 	<!-- Debugging - 12 -->
