@@ -1,3 +1,11 @@
+[B][COLOR red]Update - v4.2.2 – Sept. 29, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed seven instances of missing ID's in settings.xml.  This
+    just caused a constant cleaning of these 7 items that were
+    never called or referenced.  This now avoids that notice.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed scraper progress dialog displaying to many scraper
+    names for skins with small progress dialogs.  Names will not
+    display until the remaining count reaches 6.[/I]
+
 [B][COLOR red]Update - v4.2.1 – Sept. 26, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] fix incorrect version bump.[/I]
 
